@startuml SpaceProbe_Detailed

' --- Global Styles ---
skinparam classAttributeIconSize 0
skinparam direction LR
skinparam packageStyle rectangle
skinparam shadowing false

package "com.spaceprobe.builder" as builder {
  interface SpaceProbeBuilder {
    +reset()
    +buildPropulsionSystem()
    +buildPowerSource()
    +buildScientificInstruments()
    +buildMissionTarget()
    +buildPayloadMass()
    +getResult(): com.spaceprobe.model.SpaceProbe
  }

  class MarsProbeBuilder {
    - probe: com.spaceprobe.model.SpaceProbe
    +MarsProbeBuilder()
    +reset()
    +buildPropulsionSystem()
    +buildPowerSource()
    +buildScientificInstruments()
    +buildMissionTarget()
    +buildPayloadMass()
    +getResult(): com.spaceprobe.model.SpaceProbe
  }

  class JupiterProbeBuilder {
    - probe: com.spaceprobe.model.SpaceProbe
    +JupiterProbeBuilder()
    +reset()
    +buildPropulsionSystem()
    +buildPowerSource()
    +buildScientificInstruments()
    +buildMissionTarget()
    +buildPayloadMass()
    +getResult(): com.spaceprobe.model.SpaceProbe
  }

  class MissionControl {
    +constructStandardProbe(builder: SpaceProbeBuilder): com.spaceprobe.model.SpaceProbe
    +constructLightweightProbe(builder: SpaceProbeBuilder): com.spaceprobe.model.SpaceProbe
  }
}

package "com.spaceprobe.prototype" as proto {
  interface IPrototype {
    +deepClone(): IPrototype
  }
}

package "com.spaceprobe.model" as model {
  class SpaceProbe {
    - propulsionSystem: String
    - powerSource: String
    - scientificInstruments: List<String>
    - missionTarget: String
    - payloadMass: double
    - SpaceProbe()
    {static} +createNewInstance(): SpaceProbe
    +deepClone(): com.spaceprobe.prototype.IPrototype
    +describe(): String
    +getPropulsionSystem(): String
    +setPropulsionSystem(propulsionSystem: String)
    +getPowerSource(): String
    +setPowerSource(powerSource: String)
    +getScientificInstruments(): List<String>
    +setScientificInstruments(instruments: List<String>)
    +addScientificInstrument(instrument: String)
    +getMissionTarget(): String
    +setMissionTarget(target: String)
    +getPayloadMass(): double
    +setPayloadMass(mass: double)
  }
}

package "com.spaceprobe.singleton" as single {
  class ConfigurationManager {
    - {static} instance: ConfigurationManager
    - prototypes: Map<String, com.spaceprobe.prototype.IPrototype>
    - ConfigurationManager()
    {static} +getInstance(): ConfigurationManager
    +addPrototype(key: String, prototype: com.spaceprobe.prototype.IPrototype)
    +getClone(key: String): com.spaceprobe.prototype.IPrototype
    +hasPrototype(key: String): boolean
    +getPrototypeKeys(): Set<String>
    +clearPrototypes()
  }
}

package "com.spaceprobe.controller" as controller {
  class SpaceProbeController {
    - manager: com.spaceprobe.singleton.ConfigurationManager
    - director: com.spaceprobe.builder.MissionControl
    +SpaceProbeController()
    -initializeTemplates()
    +getTemplates(): ResponseEntity<Map<String, Object>>
    +getTemplate(key: String): ResponseEntity<Map<String, Object>>
    +cloneProbe(templateKey: String, modifications: Map<String, Object>): ResponseEntity<Map<String, Object>>
    +buildProbe(probeType: String): ResponseEntity<Map<String, Object>>
    +runDemo(): ResponseEntity<Map<String, Object>>
    -convertProbeToMap(probe: com.spaceprobe.model.SpaceProbe): Map<String, Object>
  }
}

package "com.spaceprobe" as root {
  class SpaceMissionApp {
    {static} +deployMission()
    {static} +main(args: String[])
  }
}

' --- Relationships ---
root.SpaceMissionApp ..> builder.MissionControl : uses
root.SpaceMissionApp ..> single.ConfigurationManager : uses
root.SpaceMissionApp ..> model.SpaceProbe : uses

builder.MissionControl o-- builder.SpaceProbeBuilder : orchestrates
builder.SpaceProbeBuilder <|.. builder.MarsProbeBuilder
builder.SpaceProbeBuilder <|.. builder.JupiterProbeBuilder
builder.MarsProbeBuilder ..> model.SpaceProbe : creates
builder.JupiterProbeBuilder ..> model.SpaceProbe : creates

proto.IPrototype <|.. model.SpaceProbe : implements
single.ConfigurationManager *-- proto.IPrototype : manages

controller.SpaceProbeController ..> single.ConfigurationManager : uses
controller.SpaceProbeController ..> builder.MissionControl : uses
controller.SpaceProbeController ..> builder.MarsProbeBuilder : builds
controller.SpaceProbeController ..> builder.JupiterProbeBuilder : builds
controller.SpaceProbeController ..> model.SpaceProbe : returns

@enduml
